--- a/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:app="clr-namespace:_2D_RPG_Negiramen"
              x:Class="_2D_RPG_Negiramen.Views.MainPage">
 
     <ScrollView>
@@ -15,8 +16,15 @@
                 HeightRequest="200"
                 HorizontalOptions="Center" />
 
+            <!--
             <Label
                 Text="画面を作る"
+                SemanticProperties.HeadingLevel="Level1"
+                FontSize="32"
+                HorizontalOptions="Center" />
+            -->
+            <Label
+                Text="{app:Translate LayoutTheScreen}"
                 SemanticProperties.HeadingLevel="Level1"
                 FontSize="32"
                 HorizontalOptions="Center" />
