--- a/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
@@ -31,6 +31,7 @@
         </Style>
     </ContentPage.Resources>
 
+    <!-- 束縛しているビューモデル -->
     <ContentPage.BindingContext>
         <viewModels:TilePaletteEditPageViewModel />
     </ContentPage.BindingContext>
