--- a/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
@@ -25,7 +25,7 @@
             <!-- 「言語を選ぶ」 -->
             <Picker x:Name="picker"
                     HorizontalOptions="Center"
-                    ItemsSource="{Binding LanguageCollection}"
+                    ItemsSource="{Binding LocaleIdCollection}"
                     SelectedItem="{Binding CultureInfoAsStr}"
                     Title="{app:Translate SelectLanguage}"/>
 
