--- a/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:app="clr-namespace:_2D_RPG_Negiramen"
              xmlns:modelsDrawing="clr-namespace:_2D_RPG_Negiramen.Models.Drawing"
              xmlns:viewModels="clr-namespace:_2D_RPG_Negiramen.ViewModels"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
@@ -41,36 +42,48 @@
         ==============
     -->
     <Shell.TitleView>
-        <!--
-            パンくずリスト
-            ==============
-        -->
-        <HorizontalStackLayout>
-
-            <Button x:Name="HomeBtn"
-                    Text="Home"
-                    SemanticProperties.Hint="Back to the home"
-                    Clicked="HomeBtn_Clicked"
-                    BorderColor="SkyBlue"/>
-
-            <Label Text="＞"
-                   TextColor="White"
-                   SemanticProperties.Hint="Separator"
-                   VerticalTextAlignment="Center"/>
-
+        <Grid ColumnDefinitions="*,*"
+              BackgroundColor="DodgerBlue">
             <!--
-                ページ・タイトル
-                ================
+                パンくずリスト
+                ==============
             -->
-            <Label Text="タイル・パレット編集"
-                   VerticalOptions="Center"
-                   HorizontalOptions="Center"
-                   FontSize="Large"
-                   TextColor="White" />
-        </HorizontalStackLayout>
+            <HorizontalStackLayout Grid.Column="0"
+                                   HorizontalOptions="Start">
+                <Button x:Name="HomeBtn"
+                        Text="Home"
+                        SemanticProperties.Hint="Back to the home"
+                        Clicked="HomeBtn_Clicked"
+                        BorderColor="SkyBlue"/>
+
+                <Label Text="＞"
+                       TextColor="White"
+                       SemanticProperties.Hint="Separator"
+                       VerticalTextAlignment="Center"/>
+
+                <!--
+                    ページ・タイトル
+                    ================
+                -->
+                <Label Text="タイル・パレット編集"
+                       VerticalOptions="Center"
+                       HorizontalOptions="Center"
+                       FontSize="Large"
+                       TextColor="White" />
+            </HorizontalStackLayout>
+
+            <!-- 「言語を選ぶ」 -->
+            <Picker Grid.Column="1"
+                    VerticalOptions="Center"
+                    HorizontalOptions="End"
+                    ItemsSource="{Binding LocaleIdCollection}"
+                    BackgroundColor="White"
+                    SelectedItem="{Binding CultureInfoAsStr}"/>
+        </Grid>
     </Shell.TitleView>
 
-    <Grid RowDefinitions="80,*,164">
+    <Grid RowDefinitions="80,*,164"
+          BackgroundColor="DarkSlateGray">
 
         <!--
             上メニュー
