--- a/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
@@ -10,11 +10,37 @@
         <viewModels:MainPageViewModel />
     </ContentPage.BindingContext>
 
+    <!--
+        画面内タイトル
+        ==============
+    -->
+    <Shell.TitleView>
+        <Grid ColumnDefinitions="*,*"
+              BackgroundColor="DodgerBlue">
+            <!--
+                パンくずリスト
+                ==============
+            -->
+            <HorizontalStackLayout Grid.Column="0"
+                                   HorizontalOptions="Start">
+                <!--
+                    ページ・タイトル
+                    ================
+                -->
+                <Label VerticalOptions="Center"
+                       HorizontalOptions="Center"
+                       Margin="16,0,0,0"
+                       FontSize="Large"
+                       Text="Home"
+                       TextColor="White" />
+            </HorizontalStackLayout>
+        </Grid>
+    </Shell.TitleView>
+
     <ScrollView>
-        <VerticalStackLayout
-            Spacing="25"
-            Padding="30,0"
-            VerticalOptions="Center">
+        <VerticalStackLayout Spacing="25"
+                             Padding="30,0"
+                             BackgroundColor="Gainsboro">
 
             <Image
                 Source="title_header.png"
@@ -27,14 +53,14 @@
                     HorizontalOptions="Center"
                     ItemsSource="{Binding LocaleIdCollection}"
                     SelectedItem="{Binding CultureInfoAsStr}"
-                    Title="{app:Translate SelectLanguage}"/>
+                    Title="{app:Translate SelectLanguage}"
+                    BackgroundColor="White"/>
 
             <!-- 「画面をレイアウトする」 -->
-            <Label
-                Text="{app:Translate LayoutTheScreen}"
-                SemanticProperties.HeadingLevel="Level1"
-                FontSize="32"
-                HorizontalOptions="Center" />
+            <Label HorizontalOptions="Center"
+                   Text="{app:Translate LayoutTheScreen}"
+                   SemanticProperties.HeadingLevel="Level1"
+                   FontSize="32"/>
 
             <Grid ColumnDefinitions="*,*" RowDefinitions="*,*">
 
@@ -69,11 +95,10 @@
             </Grid>
 
             <!-- 「データを編集する」 -->
-            <Label
-                Text="{app:Translate EditYourData}"
-                SemanticProperties.HeadingLevel="Level1"
-                FontSize="32"
-                HorizontalOptions="Center" />
+            <Label HorizontalOptions="Center"
+                   Text="{app:Translate EditYourData}"
+                   SemanticProperties.HeadingLevel="Level1"
+                   FontSize="32"/>
 
             <Grid ColumnDefinitions="*,*" RowDefinitions="*,*,*">
 
@@ -115,11 +140,10 @@
             </Grid>
 
             <!-- 「システム」 -->
-            <Label
-                Text="{app:Translate System}"
-                SemanticProperties.Hint="System"
-                FontSize="32"
-                HorizontalOptions="Center" />
+            <Label HorizontalOptions="Center"
+                   Text="{app:Translate System}"
+                   SemanticProperties.Hint="System"
+                   FontSize="32"/>
 
             <Grid RowDefinitions="*,*,*" ColumnDefinitions="*,*">
 
@@ -159,26 +183,10 @@
                         SemanticProperties.Hint="Tile palette editor page"
                         Clicked="TilePaletteEditButton_Clicked"/>
             </Grid>
-            
-            <Label Text="Welcome to .NET MAUI!"
-               VerticalOptions="Center" 
-               HorizontalOptions="Center" />
 
-            <!--
-            <Label
-                Text="Welcome to .NET Multi-platform App UI"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                FontSize="18"
-                HorizontalOptions="Center" />
-
-            <Button
-                x:Name="CounterBtn"
-                Text="Click me"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Center" />
-            -->
+            <Label HorizontalOptions="Center"
+                   VerticalOptions="Center"                    
+                   Text="Welcome to .NET MAUI!"/>
 
         </VerticalStackLayout>
     </ScrollView>
