--- a/Visual Studio/2D RPG Negiramen/Resources/Styles/Colors.xaml
+++ b/Visual Studio/2D RPG Negiramen/Resources/Styles/Colors.xaml
@@ -4,9 +4,13 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
-    <Color x:Key="Primary">#512BD4</Color>
-    <Color x:Key="Secondary">#DFD8F7</Color>
-    <Color x:Key="Tertiary">#2B0B98</Color>
+    <Color x:Key="Primary">RoyalBlue</Color>
+    <Color x:Key="Secondary">Gainsboro</Color>
+    <Color x:Key="SecondaryDark">#606060</Color>
+    <Color x:Key="Tertiary">SkyBlue</Color>
+    <Color x:Key="TertiaryStroke">SteelBlue</Color>
+    <Color x:Key="GentleWhite">FloralWhite</Color>
+    <Color x:Key="GentleBlack">#141414</Color>
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
     <Color x:Key="Gray100">#E1E1E1</Color>
@@ -20,6 +24,7 @@
     <SolidColorBrush x:Key="PrimaryBrush" Color="{StaticResource Primary}"/>
     <SolidColorBrush x:Key="SecondaryBrush" Color="{StaticResource Secondary}"/>
     <SolidColorBrush x:Key="TertiaryBrush" Color="{StaticResource Tertiary}"/>
+    <SolidColorBrush x:Key="TertiaryStrokeBrush" Color="{StaticResource TertiaryStroke}"/>
     <SolidColorBrush x:Key="WhiteBrush" Color="{StaticResource White}"/>
     <SolidColorBrush x:Key="BlackBrush" Color="{StaticResource Black}"/>
     <SolidColorBrush x:Key="Gray100Brush" Color="{StaticResource Gray100}"/>
