--- a/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilePaletteEditPage.xaml
@@ -237,9 +237,9 @@
                               WidthRequest="{Binding GridCanvasWidthAsInt}" HeightRequest="{Binding GridCanvasHeightAsInt}"
                               InputTransparent="True">
                     <GraphicsView.Drawable>
-                        <modelsDrawing:TileSetGrid HalfThicknessOfGridLineAsInt="{Binding HalfThicknessOfGridLineAsInt}"
-                                                   WorkingGridLeftTop="{Binding WorkingGridLeftTop}"
-                                                   WorkingGridTileSize="{Binding WorkingGridTileSize}"/>
+                        <modelsDrawing:TileSetGrid HalfThicknessOfGridLineAsInt="{Binding HalfThicknessOfGridLineAsInt, Mode=OneWay}"
+                                                   WorkingGridLeftTop="{Binding WorkingGridLeftTop, Mode=OneWay}"
+                                                   WorkingGridTileSize="{Binding WorkingGridTileSize, Mode=OneWay}"/>
                     </GraphicsView.Drawable>
                 </GraphicsView>
 
@@ -253,9 +253,9 @@
                               WidthRequest="{Binding TileCursorCanvasWidthAsInt}" HeightRequest="{Binding TileCursorCanvasHeightAsInt}"
                               InputTransparent="True">
                     <GraphicsView.Drawable>
-                        <modelsDrawing:TileCursor HalfThicknessOfTileCursorLine="{Binding HalfThicknessOfTileCursorLine}"
-                                                  SelectedTileSize="{Binding SelectedTileSize}"
-                                                  SelectingOnPointingDevice="{Binding SelectingOnPointingDevice}"/>
+                        <modelsDrawing:TileCursor HalfThicknessOfTileCursorLine="{Binding HalfThicknessOfTileCursorLine, Mode=OneWay}"
+                                                  SelectedTileSize="{Binding SelectedTileSize, Mode=OneWay}"
+                                                  SelectingOnPointingDevice="{Binding SelectingOnPointingDevice, Mode=OneWay}"/>
                     </GraphicsView.Drawable>
                 </GraphicsView>
 
